--- a/examples/Vagrantfile
+++ b/examples/Vagrantfile
@@ -9,7 +9,7 @@
 DOMAIN="prevnet"
 
 # Normalmente esta memória é mais do que suficiente.
-MEMORY=500
+MEMORY=1024
 
 
 Vagrant.configure("2") do |config|
@@ -31,7 +31,10 @@ Vagrant.configure("2") do |config|
       virtualbox.cpus = 1
     end
     # Configura o puppet como provider
-    v.vm.provision :puppet, :options => ["--pluginsync"], :module_path => "modules" do |puppet|
+    v.vm.provision "webhook-node", type: "puppet", :options => ["--pluginsync"], :module_path => "modules" do |puppet|
+      puppet.facter = {
+        'exec_env' => 'vagrant',
+      }
       puppet.manifests_path = "./"
       puppet.manifest_file = "site.pp"
       puppet.options = "--environment dev --verbose"
